fix link spacing on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -398,7 +398,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -480,7 +480,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -566,7 +566,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -654,7 +654,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -742,7 +742,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -831,7 +831,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
@@ -925,7 +925,7 @@ p.title {
 		margin-top: 15px;
 	}
 
-	.pub-links{
+	.pub-links-award{
 		float: left;
 		margin-top: 15px;
 	}
